--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -39,12 +39,17 @@
             <span class="icon-bar"></span>
           </button>
           <ul class="nav navbar-nav">
-            <li id="main_page"><a href="index.html" class="navbar-brand">LING 506 — MT</a></li>
+            <li id="main_page"><a href="index.html" class="navbar-brand">LING 270</a></li>
           </ul>
         </div>
         <nav class="collapse navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
-            <li id="syllabus"><a href="syllabus.html">Syllabus</a></li>
+            <li id="syllabus">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="index.html">Syllabus<span class="caret"></span></a>
+              <ol class="dropdown-menu">
+                <li><a href="index.html#course-overview">Course Overview</a></li>
+                <li><a href="index.html#course-objectives">Course Objectives</a></li>
+            </li>
             <li id="goals"><a href="goals.html">Learning Objectives</a></li>
             <li id="readings"><a href="schedule.html">Schedule & Readings</a></li>
             <!--
