--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/mt-class.css" rel="stylesheet">   
+    <link href="assets/css/class.css" rel="stylesheet">   
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -49,9 +49,10 @@
               <ol class="dropdown-menu">
                 <li><a href="index.html#course-overview">Course Overview</a></li>
                 <li><a href="index.html#course-objectives">Course Objectives</a></li>
+                <li><a href="index.html#course-materials">Course Materials</a></li>
+                <li><a href="index.html#course-organization">Course Organization</a></li>
+                <li><a href="index.html#course-policies">Course Policies</a></li>
             </li>
-            <li id="goals"><a href="goals.html">Learning Objectives</a></li>
-            <li id="readings"><a href="schedule.html">Schedule & Readings</a></li>
             <!--
             <li id="homework">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">Homework<span class="caret"></span></a>
@@ -66,6 +67,8 @@
 -->
               </ol>
             </li>
+            <li id="goals"><a href="goals.html">Learning Objectives</a></li>
+            <li id="readings"><a href="schedule.html">Schedule & Readings</a></li>
             <li id="github"><a href="https://github.com/2020-Spring-UIUC-LING506">GitHub</a></li>
             <li id="credits"><a href="credits.html">Credits</a></li>
 <!--           <li id="piazza"><a href="https://piazza.com/illinois/spring2020/ling490ls3ls4">Piazza</a></li> -->
