--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,19 @@
 <nav role="navigation">
   <ul>
-    <li><a href="/" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
+    <li>
+        <a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a>
+        <ol class="dropdown-menu">
+          <li><a href="index.html#course-overview">Course Overview</a></li>
+          <li><a href="index.html#course-objectives">Course Objectives</a></li>
+          <li><a href="index.html#course-materials">Course Materials</a></li>
+          <li><a href="index.html#course-organization">Course Organization</a></li>
+          <li><a href="index.html#course-policies">Course Policies</a></li>
+        </ol>    
+    </li>
     <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Notes</a></li>
     <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About</a></li>
     <li><a href="/projects" {% if page.url == "/projects" %}class="active"{% endif %}>Projects</a></li>
   </ul>
 </nav>
+
+
