--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
 <nav role="navigation">
+  <b>LING 270</b>
   <ul>
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
     <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Notes</a></li>
