--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
+<b style="text-align:center">LING 270 — Language, Technology and Society</b>
 <nav role="navigation">
-  <b style="text-align:center">LING 270 — Language, Technology & Society</b>
   <ul>
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
     <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Notes</a></li>
