--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<b style="text-align:center">LING 270 — Language, Technology and Society</b>
+<h1 style="text-align:center">LING 270 — Language, Technology and Society</h1>
 <nav role="navigation">
   <ul>
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
