--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
     <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Notes</a></li>
     <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About</a></li>
-    <li><a href="/projects" {% if page.url == "/projects" %}class="active"{% endif %}>Projects</a></li>
+    <li><a href="https://campuswire.com/p/G954C73B2" {% if page.url == "/projects" %}class="active"{% endif %}>Discussion</a></li>
   </ul>
 </nav>
 
