--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Notes
 ---
 
-{% for post in site.posts %}
+{% for post in site.posts | sort | reverse %}
 <article role="article">
   <h2><a href="{{ site.baseurl }}{{ post.url }}">
     {{ post.title }}
