--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,8 +2,7 @@
 <nav role="navigation">
   <ul>
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
-    <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Modules</a></li>
-    <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About</a></li>
+    <li><a href="/schedule" {% if page.url == "/schedule" %}class="active"{% endif %}>Schedule</a></li>
     <li><a href="https://campuswire.com/c/G954C73B2" {% if page.url == "/projects" %}class="active"{% endif %}>Discussion</a></li>
   </ul>
 </nav>
