--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,7 @@
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
     <li><a href="/schedule" {% if page.url == "/schedule" %}class="active"{% endif %}>Schedule</a></li>
     <li><a href="https://campuswire.com/c/G954C73B2">Forum</a></li>
+    <li><a href="https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessments">PrairieLearn</a></li>
   </ul>
 </nav>
 
