--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
   <link rel="sitemap" type="application/xml" title="sitemap" href="{{ site.baseurl }}/sitemap.xml" />
+  <link href="{{ site.baseurl }}/assets/css/ling-class.css" rel="stylesheet">
   <style type="text/css">
     {% capture include_to_scssify %}
       {% include inline.scss %}
