--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
   <ul>
     <li><a href="/" class="dropdown-toggle" data-toggle="dropdown" {% if page.url == "/" %}class="active"{% endif %}>Syllabus</a></li>
     <li><a href="/schedule" {% if page.url == "/schedule" %}class="active"{% endif %}>Schedule</a></li>
-    <li><a href="https://campuswire.com/c/G954C73B2" {% if page.url == "/projects" %}class="active"{% endif %}>Discussion</a></li>
+    <li><a href="https://campuswire.com/c/G1DA28EEF" {% if page.url == "/projects" %}class="active"{% endif %}>Discussion</a></li>
   </ul>
 </nav>
 
